# apertium-ara

./: .gitattributes  .gitignore  AUTHORS  Makefile.am  README  apertium-ara.ara.acx  apertium-ara.ara.rlx  apertium-ara.pc.in  apertium-ara.post-ara.dix  configure.ac  modes.xml
test/: analysis-input.txt  analysis-morph-expected.txt  tests.json
